# LoRA_tinnyllama

./: .gitignore  123.py  456.py  789.py  995.py  README.md  model_train.py  pyproject.toml
data/training_data/: basic_training_data.py
local/: model_download.py
results/checkpoint-10/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
results/checkpoint-750/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
results/checkpoint-760/: rng_state.pth  scheduler.pt  trainer_state.json
results/lora-weights/: README.md  adapter_config.json
results/runs/Mar05_12-50-33_LAPTOP-VFIAO2CH/: events.out.tfevents.1741150233.LAPTOP-VFIAO2CH.16368.0
results/runs/Mar05_12-52-07_LAPTOP-VFIAO2CH/: events.out.tfevents.1741150327.LAPTOP-VFIAO2CH.20132.0
results/runs/Mar05_12-53-59_LAPTOP-VFIAO2CH/: events.out.tfevents.1741150439.LAPTOP-VFIAO2CH.6400.0
results/runs/Mar05_12-58-01_LAPTOP-VFIAO2CH/: events.out.tfevents.1741150681.LAPTOP-VFIAO2CH.24300.0
results/runs/Mar05_12-58-24_LAPTOP-VFIAO2CH/: events.out.tfevents.1741150705.LAPTOP-VFIAO2CH.18736.0
results/runs/Mar05_13-00-18_LAPTOP-VFIAO2CH/: events.out.tfevents.1741150819.LAPTOP-VFIAO2CH.20660.0
results/runs/Mar05_13-13-02_LAPTOP-VFIAO2CH/: events.out.tfevents.1741151582.LAPTOP-VFIAO2CH.19736.0
results/runs/Mar05_13-14-36_LAPTOP-VFIAO2CH/: events.out.tfevents.1741151676.LAPTOP-VFIAO2CH.19536.0
simple_results/logs/: events.out.tfevents.1741147541.LAPTOP-VFIAO2CH.22104.0
tools/: data_convert_to_instruction_format.py  load_base_model.py
(+2 files in other folders)
