[tool.poetry]
name = "LoRA_TinyLlama"
version = "0.1.0"
description = ""
authors = ["simongood <simongood2986@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "4.39.0"
datasets = "2.14.5"
peft = "0.8.2"
accelerate = "0.28.0"
bitsandbytes = "0.41.1"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.0"
tensorboard = "^2.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
